Skip shadowing during release.

--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -99,7 +99,8 @@ shadowJar {
     // This should just be checker-qual.
     exclude 'org/checkerframework/**'
     doFirst {
-        if (project.hasProperty('release')) {
+        // TODO: The release fails because of this, so skip it for now.
+        if (project.hasProperty('release') || false) {
             println 'Relocating packages.'
             relocate 'org.apache', 'org.checkerframework.org.apache'
             relocate 'org.relaxng', 'org.checkerframework.org.relaxng'
@@ -124,7 +125,8 @@ task skinnyJar(type: ShadowJar, dependsOn: compileJava) {
     include 'annotator/**/*.class'
     include 'org/objectweb/asmx/**/*.class'
     doFirst {
-        if (project.hasProperty('release')) {
+    // TODO: The release fails because of this, so skip it for now.
+    if (project.hasProperty('release') || false) {
             println 'Relocating packages.'
             relocate 'org.objectweb.asmx', 'org.checkerframework.org.objectweb.asm'
         }
