--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation files('../asmx/bin/')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'com.google.errorprone:javac:9-dev-r4023-3'
+    testCompile 'com.google.errorprone:javac:9+181-r4173-1'
 }
 
 task compileAsmx(type: Exec, group: 'Build') {
