--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -53,12 +53,11 @@ dependencies {
     implementation 'org.plumelib:plume-util:1.0.7'
     implementation 'org.plumelib:signature-util:0.0.6'
     compileOnly 'org.checkerframework:checker-qual:2.5.4'
-    implementation 'com.google.errorprone:javac:9-dev-r4023-3'
+    implementation 'com.google.errorprone:9+181-r4173-1'
     implementation 'com.google.guava:guava:28.0-jre'
     implementation files('../asmx/bin/')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'com.google.errorprone:javac:9+181-r4173-1'
 }
 
 task compileAsmx(type: Exec, group: 'Build') {
