Support Java 9 compiler for use with JVM 8 (#240)
Commits: 6cb3bd4, 242d754 changed source files.

Contributors: @wmdietl, @zhangjiangqige, @smillst
co-authored-by: zhangjiangqige zhangjiangqige@gmail.com
co-authored-by: Suzanne Millstein smillst@cs.washington.edu

--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -19,6 +19,10 @@ repositories {
     mavenCentral()
 }
 
+// On a Java 8 JVM, use error-prone javac and source/target 8.
+// On a Java 9+ JVM, use the host javac, default source/target, and required module flags.
+ext.isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
+
 sourceSets {
     main.java {
         srcDirs = ['src', '../scene-lib/src']
@@ -36,21 +40,24 @@ sourceSets {
         exclude("**/*.java")
     }
 }
+configurations {
+    javacJar
+}
 
 dependencies {
+    if (isJava8) {
+        javacJar group: 'com.google.errorprone', name: 'javac', version: "9+181-r4173-1"
+    }
     implementation 'org.plumelib:bcel-util:1.1.4'
     implementation 'org.plumelib:options:1.0.1'
     implementation 'org.plumelib:plume-util:1.0.7'
     implementation 'org.plumelib:signature-util:0.0.6'
     compileOnly 'org.checkerframework:checker-qual:2.5.4'
-    implementation 'org.checkerframework:compiler:2.4.0'
+    implementation 'com.google.errorprone:javac:9+181-r4173-1'
     implementation 'com.google.guava:guava:28.0-jre'
-//    implementation files("${project.buildDir}/libs/asmx.jar")
     implementation files('../asmx/bin/')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    // Change the JDK via -Dorg.gradle.java.home=JDK_PATH
-    testCompile files(Jvm.current().toolsJar)
 }
 
 task compileAsmx(type: Exec, group: 'Build') {
@@ -91,10 +98,6 @@ shadowJar {
     destinationDirectory = projectDir
     includeEmptyDirs = false
     archiveVersion = null
-    minimize {
-        exclude(dependency('org.checkerframework:compiler:.*'))
-        exclude(dependency(files('../asmx/bin/')))
-    }
     // Don't include any class from the Checker Framework.
     // This should just be checker-qual.
     exclude 'org/checkerframework/**'
@@ -120,7 +123,6 @@ task skinnyJar(type: ShadowJar, dependsOn: compileJava) {
     destinationDirectory = projectDir
     from files(sourceSets.main.output, '../asmx/bin/')
     archiveFileName = 'annotation-file-utilities.jar'
-    minimize()
     include 'scenelib/**/*.class'
     include 'annotator/**/*.class'
     include 'org/objectweb/asmx/**/*.class'
@@ -414,7 +416,7 @@ def createCheckTypeTask(checker, shortName) {
     tasks.create(name: "check${shortName}", type: JavaCompile) {
         description "Run the ${shortName} Checker on the main sources."
         group 'Verification'
-        String checkerDist = '../../checker-framework/checker/dist'
+        String checkerDist = "${projectDir}/../../checker-framework/checker/dist"
         // Always run the task.
         outputs.upToDateWhen { false }
         source = sourceSets.main.java
@@ -427,8 +429,17 @@ def createCheckTypeTask(checker, shortName) {
                 '-processor', "${checker}",
                 '-proc:only',
                 '-Xlint:-processing',
-                "-Xbootclasspath/p:${checkerDist}/jdk8.jar"
         ]
+        options.fork = true
+
+        if (isJava8) {
+            sourceCompatibility = 8
+            targetCompatibility = 8
+            options.compilerArgs += [
+                    "-Xbootclasspath/p:${checkerDist}/jdk8.jar"
+            ]
+            options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}"]
+        }
     }
 }
 
